--- a/file16/index.html
+++ b/file16/index.html
@@ -34,6 +34,27 @@
             </ul>
           </div>
       </nav>
+
+      <section class="container-fluid ">
+        <div class="row align-items-center">
+          <div class="col-lg-6 pl-0 pr-0">
+            <div id="museumofcandy" class="text-white text-center d-none d-lg-block mt-5">
+              <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+              <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+              <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+              <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+              <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+              <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+              <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            </div>
+          </div>
+          <div class="col-lg-6 pl-0 pr-0">
+            <img class="img-fluid" src="hand2.png">
+          </div>
+        </div>
+      </section>  
+
+  
       <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
